feat: Fix SpaceService API creation process - Meeds-io/MIPs#150 Prior to this change, when using SpaceService.createSpace, any property can be set and stored in database while system properties should be computed instead. This chnage ensures to not allow adding Space Members, manager, invitations, etc directly when creating a space but through dedicated API methods.